Trying to fix video placement and spacing
I have to keep making commits cause waiting for updates takes too long

--- a/frontend/src/components/About/About.css
+++ b/frontend/src/components/About/About.css
@@ -1,8 +1,11 @@
+#About{
+    margin-top: 50px;
+}
+
 .about__container {
     display: grid;
     grid-template-columns: 35% 50%;
     gap: 15%;
-    transform: translateX(-50px);
 }
 
 .about__me{
