--- a/frontend/src/components/School/School.css
+++ b/frontend/src/components/School/School.css
@@ -1,3 +1,7 @@
+#School{
+    margin-top: 50px;
+}
+
 .school__container{
     display: grid;
     grid-template-columns: repeat(3,1fr);
