--- a/frontend/src/components/Skills/Skills.css
+++ b/frontend/src/components/Skills/Skills.css
@@ -1,3 +1,7 @@
+#Skills{
+    margin-top: 50px;
+}
+
 .skills__container{
     display: grid;
     grid-template-columns: 1fr 1fr;
